changes in index.py

--- a/notebook/MovieRecommenderSystem_YTS.ipynb
+++ b/notebook/MovieRecommenderSystem_YTS.ipynb
@@ -1195,6 +1195,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 155,
+   "outputs": [],
+   "source": [
+    "pickle.dump(movie, open('movie_list.pk', 'wb'))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 75,
    "outputs": [],
    "source": [
@@ -1206,13 +1217,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 154,
    "outputs": [
     {
      "data": {
       "text/plain": "'action famili fantasi in upsid down magic disney channel origin movi 13 year old nori boxwood horac discov flux anim best friend reina carvaj manipul flame togeth enter sage academi magic studi reina expert abil har power fire land top class flare nori wonki magic procliv turn dritten half kitten half dragon land class upsid down magic otherwis known udm while headmast knightsling believ udm unconvent power leav vulner danger evil shadow magic nori fellow udm classmat set prove upsid down magic beat right side vickilewi headmasterknightsling yasmeenfletch chandra sienaagudong reinacarvaj'"
      },
-     "execution_count": 6,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
